# Portfolio

./: .gitattributes  .gitignore  SLAY.py  Доверительный интервал.xlsx
1 курс/C-Projects/: 12123.c  Tests.c
1 курс/C-Projects/LR`s-informatics/: LR10-1.c  LR10-2.c  LR11-1.c  LR5-1.c  LR5-2.c  LR8-2.c  LR9-2.c
1 курс/Алгоритмы и решение задач/: Фролов А. А., п-гр 3, Задачи на алг. Маркова.docx  Фролов А. А., п-гр 3, Т1 Ч3.docx
1 курс/ИТ в математике/ВСР/: Фролов АА, гр-2, п.гр-1, ВСР-2, Задание 2.1.docx
1 курс/ИТ в математике/ИСР/: Frolov AA, ISR, task 4.2.rar  Frolov AA, ISR, task 4.3.rar  Frolov AA,ISR,task4.3.rar.docx  Фролов АА, гр-2, п.гр-1, ИСР, Задание 1.1.docx
1 курс/ИТ в математике/Лабораторные/: Фролов АА, гр-2, ЛР матрицы.xlsx  Фролов АА, гр. 2, п.гр 1, ЛР-1, Задание 0.odt  Фролов АА, гр. 2, п.гр 1, ЛР-1, Задание 2.docx  Фролов АА, ссылка на сайт.odt
1 курс/ИТ/Лабы/: Фролов А. А., ЛР 7.1.docx  Фролов АА, гр-2, ЛР-1.docx
1 курс/ИТФ/: ЛР-6.xlsx  Фролов, Курылев, Чагин, Хубларян, ЛР-3.docx  Чагин, Фролов, Курылев, ЛР-6.docx
1 курс/Информатика/ИСР/: Фролов А.А,гр 2, п-гр 1, СР-1.docx
1 курс/Информатика/Лабораторные/: .$БС ЛР13-1.png.bkp  .$Блок схема, ЛР-5, Задание 1.png.bkp  БС ЛР11-1.drawio  БС ЛР13-1.drawio  Лабораторная работа 2.docx  Фролов АА, гр-2, ЛР-11.docx  Фролов АА, гр-2, ЛР-13.docx  Фролов АА, гр-2, ЛР-2.docx  Фролов АА, гр-2, ЛР-7.docx
1 курс/Курсач/: Текст выступления.docx  Фролов АА, гр-2, Курсовая ПРЕЗ.pptx
1 курс/Практика/: Фролов А. А., ВСР 2.1.docx  Фролов А. А., ВСР 2.3.docx  Фролов А. А., ИСР 1.5.docx  Фролов А. А., ИСР 1.6.docx  Фролов А. А., ИСР 1.7.docx  Фролов А. А., ИСР 1.8.docx  Фролов АА, ВСР 2.4.docx
1 курс/Физика/: ЛР-1.xlsx  ЛР-2.xlsx  Лр Физика, Отрыв кольца.docx
1-course/C-Projects/: 123.c  Tests.c
1-course/C-Projects/LR`s-informatics/: LR-ITF.c  LR11-2.c  LR12.c  LR13-1.c  LR13-2.c  LR13-3.c  LR5-3.c  LR8-1.c  LR8-3.c  LR9-1.c  LR9-3.c
1-course/Rust-Projects/LR1/: task_1.rs  task_2.rs  task_3.rs  task_4.rs  task_5.rs  task_6.rs  task_7.rs  task_8.rs
1-course/Rust-Projects/LR2/: task_1.rs  task_2.rs
1-course/Rust-Projects/writing/: Cargo.toml
1-course/Алгоритмы и решение задач/: .$Дракон-Схема 1.png.bkp  Т1 Ч3.docx  Фролов А. А., п-гр 3, Т1 Ч1.docx  Фролов А. А., п-гр 3, Т1 Ч4 З1.docx
1-course/ИТ/: ВЫступление 2.docx  Фролов АА, Выступление 2СЕМ.docx
1-course/ИТ в математике/ВСР/: Фролов АА, гр-2, п.гр-1, ВСР, Задание 1.1.docx  Фролов АА, гр-2, п.гр-1, ВСР-2, Задание 2.4.docx
1-course/ИТ в математике/ИСР/: Frolov AA, ISR,task 4.4.rar  Frolov AA,ISR,task4.1.rar  Скринкаст ИСР 4.5.pptx  Фролов АА, Тема-2, ИСР общ часть.pptx  Фролов АА, гр-2,п.гр-1, ИСР графики.xls.xlsx
1-course/ИТ в математике/Лабораторные/: Фролов АА, гр-2, ИСР матрицы.xlsx  Фролов АА, гр-2, Тема-3, ЛР-введение, Задание 1.1.docx  Фролов АА, гр-2, п.гр-1, ЛР графики.xls.xlsx
1-course/ИТ/student_analytics_project/: Makefile  README.md  meson.build
1-course/ИТ/student_analytics_project/data/: report.csv  students.csv  students.csv_Zone.Identifier
1-course/ИТ/student_analytics_project/include/: student.h
1-course/ИТ/student_analytics_project/src/: main.c  student.c
1-course/ИТ/Лабы/: Фролов АА, гр-2, ЛР-3.docx
1-course/ИТФ/: ЛР-6.xlsx  Скринкаст.txt  часть 1 и часть 2(маятники).xlsx
1-course/Информатика/Лабораторные/: .$Блок Схема, ЛР-8, Задание 1.png.bkp  .$Блок Схема, ЛР-8, Задание 2.png.bkp  .$Блок схема, ЛР-10, Задание 2.png.bkp  .$Блок схема, ЛР-4, Задание 1.drawio.bkp  .$Блок схема, ЛР-4, Задание 1.png.bkp  .$Блок схема, ЛР-4, Задание 2.png.bkp  Фролов АА, гр-2, ЛР-1.docx  Фролов АА, гр-2, ЛР-10.docx  Фролов АА, гр-2, ЛР-12.docx  Фролов АА, гр-2, ЛР-4.docx  Фролов АА, гр-2, ЛР-5.docx  Фролов АА, гр-2, ЛР-6.docx  Фролов АА, гр-2, ЛР-8.docx  Фролов АА, гр-2, ЛР-9.docx  Фролов АА, гр-2,ЛР-3.docx
1-course/Курсач/: Фролов АА, гр-2, Курсовая работа.docx  Фролов АА, гр-2, Курсовая работа.xlsx
1-course/ЛАТМ/ВСР/: ВРС ЛАТМ.docx  ВСР ЛАТМ 2.pptx
1-course/Практика/: Фролов А. А., ВСР 2.2.docx  Фролов А. А., ВСР 2.5.docx  Фролов А. А., ИСР 1.4.docx  Фролов А. А., ИСР 1.9.docx
1-course/Программирование/: Фролов А. А., ЛР-1.docx
1-course/Физика/: Видимые траектории.xlsx  Движение тела, брошенного под углом к горизонту.xlsx  ЛР Разряд и Заряд конденсатора.xlsx  ЛР-3.xlsx  ЛР-ОТРЫВ КОЛЬЦА.docx  ЛР-ТОНКИЕ ЛИНЗЫ.docx  ЛР2_ОПРЕДЕЛЕНИЕ_ЦИКЛИЧЕСКОЙ_ЧАСТОТЫ.docx  Лр Физика, ШАРИК КИДАТ.docx  колебательный контур ЛР4.xlsx
2-course/: HUY.docx
2-course/DB/: lab1_2.sql
2-course/SEM3/WebDev/: check-7.js  check-8.js  check-9.js  ex.jsx  pattern.html  tasks.js  templates.js
2-course/SEM3/Интегралы/: Фролов А.А. Часть 3. Рациональные дроби..docx  (+1 more)
2-course/WebDev/: check-10.html  tasks.html  tasks.js
2-course/МатСтат/: ЛР2.py  ЛР5.xlsx
2-course/Физика/: ЛР АТОМН.xlsx  ЛР ТЕПЛ.xlsx  ЛР №8 (Физика).docx
Practise-1/: Фролов А. А., ИСР 1.3.docx
Лабы/: Фролов АА, гр-2, ЛР-8, примеры..docx  Фролов АА, гр-2, ЛР-8, ссылка..docx
Лабы/Фролов АА, гр2, лр4/: index.html
(+139 files in other folders)
